services/hubble/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: hubble
      namespace: kube-system
      sectionName: https
  hostnames:
    - "hubble.CHANGEME_DOMAIN"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy-hubble
          port: 4180
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-proxy-hubble
      backendRefs:
        - name: hubble-ui
          port: 80
